[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mynet"
version = "1.0.0"
description = "High-performance async network reconnaissance toolkit"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "MyNet Contributors" }
]
keywords = [
    "security",
    "scanner",
    "reconnaissance",
    "network",
    "penetration-testing",
    "async",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]

dependencies = [
    "aiohttp>=3.9.0",
    "dnspython>=2.4.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "ipwhois>=1.2.0",
    "tldextract>=5.1.0",
    "beautifulsoup4>=4.12.0",
    "cryptography>=41.0.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
screenshots = [
    "playwright>=1.40.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]
all = [
    "mynet[screenshots,dev]",
]

[project.scripts]
mynet = "mynet.ui.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/mynet"
Repository = "https://github.com/yourusername/mynet"
Issues = "https://github.com/yourusername/mynet/issues"

[tool.hatch.build.targets.wheel]
packages = ["mynet"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["mynet"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
